--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="join">
-<a href="" target="_blank" >DOCUMENTATION </a>
+<a href="./document.html" target="_blank" >DOCUMENTATION </a>
 </div>
 
 <script src="req.js">
