--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div>
 <div class="forma">
-<form method="post" action="http://localhost:5001/generate/create" name="form">
+<form method="post" action="http://localhost:5001/generate" name="form">
     <div>
         <input type="text" placeholder="Enter your name" name="name" required>
     </div>
